# internal/handlers/categories_public_handlers.go
@@ -18,73 +18,15 @@ import (
 	"github.com/nicksnyder/go-i18n/v2/i18n"
 )
 
-func GetCategoryPublicHandler(app *app.Application) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		lang_code := common.GetAcceptLanguageHeader(r)
-
-		// valTrans := r.Context().Value(constants.ValTransKey).(ut.Translator)
-		localizer := r.Context().Value(constants.LocalizerKey).(*i18n.Localizer)
-
-		slug, err := common.ReadSlugParam(r)
-		if err != nil {
-			common.NotFoundResponse(app.Logger, localizer, w, r)
-			return
-		}
-
-		category, err := services.GetCategoryBySlugService(app, slug)
-		if err != nil {
-			switch {
-			case errors.Is(err, common.ErrRecordNotFound):
-				common.NotFoundResponse(app.Logger, localizer, w, r)
-			default:
-				common.ServerErrorResponse(app.Logger, localizer, w, r, err)
-			}
-			return
-		}
-
-		categoryPublicResponse := mappers.CategoryToCategoryPublicResponseMapper(category)
-
-		trMapWrapper := make(map[string]map[string]string)
-
-		nameFieldTrMap := make(map[string]string)
-		name_field_tr, name_value_tr, err := utils.GetTranslationMap(app, category.ID, lang_code, "name")
-		if err != nil {
-			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
-			return
-		}
-		nameFieldTrMap["field_name"] = name_field_tr
-		nameFieldTrMap["field_value"] = name_value_tr
-		trMapWrapper["name"] = nameFieldTrMap
-
-		descFieldTrMap := make(map[string]string)
-		desc_field_tr, desc_value_tr, err := utils.GetTranslationMap(app, category.ID, lang_code, "description")
-		if err != nil {
-			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
-			return
-		}
-		descFieldTrMap["field_name"] = desc_field_tr
-		descFieldTrMap["field_value"] = desc_value_tr
-		trMapWrapper["description"] = nameFieldTrMap
-
-		err = common.WriteJson(w, http.StatusOK, types.Envelope{
-			"category":     categoryPublicResponse,
-			"translations": trMapWrapper,
-		}, nil)
-		if err != nil {
-			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
-		}
-	}
-}
-
-// @Summary List all categories
-// @Tags Public
-// @Accept json
+// @Summary List categories
+// @Description List categories with pagination and filters
+// @Tags categories
 // @Produce json
-// @Success 200 {object} types.Envelope
-// @Failure 500 {object} types.Envelope
-// @Failure 422 {object} types.Envelope
 // @Param filters query requests.CategoriesAdminFilters true "Filters"
 // @Router /api/v1/categories [get]
+// @Success 200 {object} types.Envelope{metadata=types.Metadata,results=[]data.Category}
+// @Failure 500 {object} types.Envelope{error=string}
+// @Failure 422 {object} types.Envelope{error=string}
 func ListCategoriesPublicHandler(app *app.Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		lang_code := common.GetAcceptLanguageHeader(r)
@@ -150,6 +92,74 @@ func ListCategoriesPublicHandler(app *app.Application) http.HandlerFunc {
 		err = common.WriteJson(w, http.StatusOK, types.Envelope{
 			"metadata": metadata,
 			"results":  catWithTransResponses,
+		}, nil)
+		if err != nil {
+			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
+		}
+	}
+}
+
+// @Summary Get category by slug
+// @Description Get specific category details by slug
+// @Tags categories
+// @Accept multipart/form-data
+// @Produce json
+// @Param slug path string true "Slug"
+// @Router /api/v1/categories/{slug} [get]
+// @Success 200 {object} types.Envelope
+// @Failure 404 {object} types.Envelope
+// @Failure 500 {object} types.Envelope
+func GetCategoryPublicHandler(app *app.Application) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		lang_code := common.GetAcceptLanguageHeader(r)
+
+		// valTrans := r.Context().Value(constants.ValTransKey).(ut.Translator)
+		localizer := r.Context().Value(constants.LocalizerKey).(*i18n.Localizer)
+
+		slug, err := common.ReadSlugParam(r)
+		if err != nil {
+			common.NotFoundResponse(app.Logger, localizer, w, r)
+			return
+		}
+
+		category, err := services.GetCategoryBySlugService(app, slug)
+		if err != nil {
+			switch {
+			case errors.Is(err, common.ErrRecordNotFound):
+				common.NotFoundResponse(app.Logger, localizer, w, r)
+			default:
+				common.ServerErrorResponse(app.Logger, localizer, w, r, err)
+			}
+			return
+		}
+
+		categoryPublicResponse := mappers.CategoryToCategoryPublicResponseMapper(category)
+
+		trMapWrapper := make(map[string]map[string]string)
+
+		nameFieldTrMap := make(map[string]string)
+		name_field_tr, name_value_tr, err := utils.GetTranslationMap(app, category.ID, lang_code, "name")
+		if err != nil {
+			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
+			return
+		}
+		nameFieldTrMap["field_name"] = name_field_tr
+		nameFieldTrMap["field_value"] = name_value_tr
+		trMapWrapper["name"] = nameFieldTrMap
+
+		descFieldTrMap := make(map[string]string)
+		desc_field_tr, desc_value_tr, err := utils.GetTranslationMap(app, category.ID, lang_code, "description")
+		if err != nil {
+			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
+			return
+		}
+		descFieldTrMap["field_name"] = desc_field_tr
+		descFieldTrMap["field_value"] = desc_value_tr
+		trMapWrapper["description"] = nameFieldTrMap
+
+		err = common.WriteJson(w, http.StatusOK, types.Envelope{
+			"category":     categoryPublicResponse,
+			"translations": trMapWrapper,
 		}, nil)
 		if err != nil {
 			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
