# internal/handlers/languages_public_handlers.go
@@ -17,37 +17,15 @@ import (
 	"github.com/nicksnyder/go-i18n/v2/i18n"
 )
 
-func GetLanguagePublicHandler(app *app.Application) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		// valTrans := r.Context().Value(common.ValTransKey).(ut.Translator)
-		localizer := r.Context().Value(constants.LocalizerKey).(*i18n.Localizer)
-
-		id, err := common.ReadUUIDParam(r)
-		if err != nil {
-			common.BadRequestResponse(app.Logger, localizer, w, r, err)
-			return
-		}
-
-		language, err := services.GetLanguageService(app, id)
-		if err != nil {
-			switch {
-			case errors.Is(err, common.ErrRecordNotFound):
-				common.NotFoundResponse(app.Logger, localizer, w, r)
-			default:
-				common.ServerErrorResponse(app.Logger, localizer, w, r, err)
-			}
-			return
-		}
-
-		languageResponse := mappers.LanguageToLanguagePublicResponseMapper(language)
-
-		err = common.WriteJson(w, http.StatusOK, types.Envelope{"language": languageResponse}, nil)
-		if err != nil {
-			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
-		}
-	}
-}
-
+// @Summary List languages
+// @Description List languages with pagination and filters
+// @Tags languages
+// @Produce json
+// @Param filters query requests.LanguagesAdminFilters true "Filters"
+// @Router /api/v1/languages [get]
+// @Success 200 {object} types.Envelope
+// @Failure 404 {object} types.Envelope
+// @Failure 500 {object} types.Envelope
 func ListLanguagesPublicHandler(app *app.Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		valTrans := r.Context().Value(constants.ValTransKey).(ut.Translator)
@@ -84,6 +62,47 @@ func ListLanguagesPublicHandler(app *app.Application) http.HandlerFunc {
 			"metadata": metadata,
 			"results":  languagesResponse,
 		}, nil)
+		if err != nil {
+			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
+		}
+	}
+}
+
+// @Summary Get language by id
+// @Description Get specific language details by id
+// @Tags languages
+// @Produce json
+// @Param id path string true "ID"
+// @Router /api/v1/languages/{id} [get]
+// @Success 200 {object} types.Envelope
+// @Failure 400 {object} types.Envelope
+// @Failure 404 {object} types.Envelope
+// @Failure 500 {object} types.Envelope
+func GetLanguagePublicHandler(app *app.Application) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		// valTrans := r.Context().Value(common.ValTransKey).(ut.Translator)
+		localizer := r.Context().Value(constants.LocalizerKey).(*i18n.Localizer)
+
+		id, err := common.ReadUUIDParam(r)
+		if err != nil {
+			common.BadRequestResponse(app.Logger, localizer, w, r, err)
+			return
+		}
+
+		language, err := services.GetLanguageService(app, id)
+		if err != nil {
+			switch {
+			case errors.Is(err, common.ErrRecordNotFound):
+				common.NotFoundResponse(app.Logger, localizer, w, r)
+			default:
+				common.ServerErrorResponse(app.Logger, localizer, w, r, err)
+			}
+			return
+		}
+
+		languageResponse := mappers.LanguageToLanguagePublicResponseMapper(language)
+
+		err = common.WriteJson(w, http.StatusOK, types.Envelope{"language": languageResponse}, nil)
 		if err != nil {
 			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
 		}
